--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{lang()}}">
+<html lang="{{lang}}">
 	<head>
 		<title>{% block title %}{% endblock title %}</title>
 		<meta charset="utf-8" />
