--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -10,7 +10,7 @@
 	<body>
 		{% block content %}{% endblock content %}
 		<footer>
-			<div id="copyright">&copy; 2023 Amplify Education Inc.</div>
+			<div id="copyright">&copy; 2023</div>
 		</footer>
 	</body>
 </html>
